# nova-rag

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
src/nova_rag/: __init__.py  __main__.py  chunker.py  config.py  docs_cluster.py  docs_generator.py  docs_prompts.py  git_intel.py  graph.py  indexer.py  searcher.py  server.py  store.py  watcher.py  workspace.py
src/rag_mcp/: __init__.py  __main__.py  chunker.py  config.py  graph.py  indexer.py  searcher.py  server.py  store.py  watcher.py
tests/: conftest.py  test_chunker.py  test_graph.py  test_impact.py  test_indexer.py  test_languages.py  test_mcp_stdio.py  test_searcher.py  test_server.py  test_smart_router.py  test_store.py  test_workspace.py
tests/fixtures/: graph_sample.py  sample.c  sample.kt  sample.php  sample.py  sample.rb  sample.ts  sample_unknown.txt
