[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "0.1.0"
description = "Local RAG MCP server for semantic code search — works with Claude Code and any MCP client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vladimir Pronevic" },
]
keywords = ["mcp", "rag", "semantic-search", "code-search", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "pathspec>=0.12.0",
    "numpy>=1.26.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
rag-mcp = "rag_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
