[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nova-rag"
dynamic = ["version"]
description = "Local code intelligence MCP server — semantic search + code graph + impact analysis. Ask code in plain language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vladimir Pronevic" },
]
keywords = ["mcp", "rag", "semantic-search", "code-search", "code-graph", "claude-code", "nova-rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "pathspec>=0.12.0",
    "numpy>=1.26.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
nova-rag = "nova_rag.server:main"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/nova_rag/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nova_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
